--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-https://github.com/bigred202403/bigred202403.github.io
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Big Red Connect OKC</title>
+  <style>
+    body {
+      background-color: #111;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px;
+    }
+    h1 {
+      color: #e00000;
+      margin-bottom: 10px;
+      font-size: 2.5rem;
+    }
+    p {
+      margin-bottom: 30px;
+      font-style: italic;
+      color: #ccc;
+    }
+    .button {
+      display: block;
+      width: 100%;
+      max-width: 300px;
+      margin: 10px 0;
+      padding: 15px;
+      background-color: #e00000;
+      color: white;
+      text-align: center;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 6px;
+      transition: background-color 0.3s;
+    }
+    .button:hover {
+      background-color: #c00000;
+    }
+  </style>
+</head>
+<body>
+  <h1>Big Red Connect OKC</h1>
+  <p>Private. Local. Trusted. You know the drill.</p>
+
+  <a class="button" href="sms:8335262643">📲 Text to Connect</a>
+  <a class="button" href="https://big-red-connect-okc.square.site" target="_blank">🌐 Main Page</a>
+  <a class="button" href="https://www.facebook.com/share/g/16XP93KAZV/?mibextid=wwXIfr" target="_blank">💬 Join the Group Chat</a>
+</body>
+</html>
